--- a/Eigenvalues/Form4.resx
+++ b/Eigenvalues/Form4.resx
@@ -117,4 +117,68 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAI0AAAARCAYAAADg+i+dAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAAEpJREFUaEPt0kENACAQwDDMHP4dAhLYv48mE7A1MwcK05CZhsw0ZKYhe9PsF/DP
+        NGSmITMNmWnITENmGjLTkJmGzDRkpiEzDdE+F2pQalZHspi9AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAI0AAAARCAYAAADg+i+dAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAAEpJREFUaEPt0kENACAQwDDMHP4dAhLYv48mE7A1MwcK05CZhsw0ZKYhe9PsF/DP
+        NGSmITMNmWnITENmGjLTkJmGzDRkpiEzDdE+F2pQalZHspi9AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAI0AAAARCAYAAADg+i+dAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAAEpJREFUaEPt0kENACAQwDDMHP4dAhLYv48mE7A1MwcK05CZhsw0ZKYhe9PsF/DP
+        NGSmITMNmWnITENmGjLTkJmGzDRkpiEzDdE+F2pQalZHspi9AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox4.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAI0AAAARCAYAAADg+i+dAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAAEpJREFUaEPt0kENACAQwDDMHP4dAhLYv48mE7A1MwcK05CZhsw0ZKYhe9PsF/DP
+        NGSmITMNmWnITENmGjLTkJmGzDRkpiEzDdE+F2pQalZHspi9AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAI0AAAARCAYAAADg+i+dAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAAEpJREFUaEPt0kENACAQwDDMHP4dAhLYv48mE7A1MwcK05CZhsw0ZKYhe9PsF/DP
+        NGSmITMNmWnITENmGjLTkJmGzDRkpiEzDdE+F2pQalZHspi9AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox5.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAI0AAAARCAYAAADg+i+dAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAAEpJREFUaEPt0kENACAQwDDMHP4dAhLYv48mE7A1MwcK05CZhsw0ZKYhe9PsF/DP
+        NGSmITMNmWnITENmGjLTkJmGzDRkpiEzDdE+F2pQalZHspi9AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox6.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAI0AAAARCAYAAADg+i+dAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAAEpJREFUaEPt0kENACAQwDDMHP4dAhLYv48mE7A1MwcK05CZhsw0ZKYhe9PsF/DP
+        NGSmITMNmWnITENmGjLTkJmGzDRkpiEzDdE+F2pQalZHspi9AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAI0AAAARCAYAAADg+i+dAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAAEpJREFUaEPt0kENACAQwDDMHP4dAhLYv48mE7A1MwcK05CZhsw0ZKYhe9PsF/DP
+        NGSmITMNmWnITENmGjLTkJmGzDRkpiEzDdE+F2pQalZHspi9AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox7.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAI0AAAARCAYAAADg+i+dAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        dAAAEnQB3mYfeAAAAEpJREFUaEPt0kENACAQwDDMHP4dAhLYv48mE7A1MwcK05CZhsw0ZKYhe9PsF/DP
+        NGSmITMNmWnITENmGjLTkJmGzDRkpiEzDdE+F2pQalZHspi9AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
